# parallel-sudoku-sharable-version

./: CMakeLists.txt  README.md  list.c  list.h  sudoku.c
